# gitlike-commands

./: .codeclimate.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: awesomebot.yml  mega-linter.yml
gitlike_commands/: __init__.py
tests/: test_gitlike_commands.py
