[tool.poetry]
name = "gitlike-commands"
version = "0.2.0"
description = ""
authors = ["Joe Block <jpb@unixorn.net>"]
homepage = "https://github.com/unixorn/gitlike-commands"
repository = "https://github.com/unixorn/gitlike-commands"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/unixorn/gitlike-commands/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# gitalike-demo = "gitlike_commands:subcommand_driver"
